<resources>
    <string name="app_name">GeekNews</string>
    <string name="info">资讯</string>
    <string name="zhihu">知乎日报</string>
    <string name="app_options">选项</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="v2ex">VTEX</string>
    <string name="collect">收藏</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="daily">日报</string>
    <string name="special">专栏</string>
    <string name="hot">热门</string>
</resources>
